--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -71,37 +71,58 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
-* {
+html {
   box-sizing: border-box;
-  padding: 0;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+ul {
+  list-style-type: none;
+  padding-left: 0;
   margin: 0;
 }
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  font-family: "Cormorant";
+  letter-spacing: 0.03em;
+  margin: 0;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+}
+button {
+  border: 0;
+  padding: 0;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  display: block;
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
+.main {
+  padding-top: 44px;
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
